--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,20 @@ h1{
     transform: scale(1.03);
   }
 }
+.button::before{
+  content: "";
+  position: absolute;
+  inset: -2px;
+  border-radius: inherit;
+
+  /* EFECTO METAL */
+  background: linear-gradient(
+    135deg,
+    #f5f5f5,
+    #bfbfbf,
+    #6f6f6f,
+    #e5e5e5
+  );
+
+  z-index: -1;
+}
